--- a/index.html
+++ b/index.html
@@ -53,10 +53,15 @@
                 <p class="mt-6 text-lg/8 text-gray-300">최근 관심사는 생성형 AI를 사용한 효율적인 바이브 코딩입니다!</p>
               </div>
             </div>
-            <img src="./unnamed.png"
-              alt="Product screenshot"
-              class="mx-auto max-w-full rounded-xl shadow-xl ring-1 ring-white/10 sm:w-[28.5rem] md:-ml-4 lg:ml-0"
-              width="2432" height="1442" />
+            <a href="http://222.113.126.162/" class="relative inline-block">
+              <span class="absolute bottom-2 right-2 bg-red-500 text-white text-sm font-semibold px-2 py-1 rounded z-10 shadow-md">
+                눌러보세요
+              </span>
+              <img src="./unnamed.png"
+                  alt="Product screenshot"
+                  class="mx-auto max-w-full rounded-xl shadow-xl ring-1 ring-white/10 sm:w-[28.5rem] md:-ml-4 lg:ml-0"
+                  width="2432" height="1442" />
+            </a>
           </div>
         </div>
       </div>
